# esp32-clawdmeter

./: .gitignore  README.md
daemon/: claude_usage_daemon.py
daemon-rs/: Cargo.toml
daemon-rs/src/: main.rs
firmware/: platformio.ini
firmware/src/: main.cpp  main_generic.cpp
